--- a/PetDopt/index.html
+++ b/PetDopt/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/3a47f9bce5.js" crossorigin="anonymous"></script>
   <title>Vite + React</title>
 </head>
 
